--- a/proyecto_libre1/index.html
+++ b/proyecto_libre1/index.html
@@ -163,6 +163,24 @@
     </div>
 </section>
 
+<section class="destacados">
+    <h2>Productos Destacados</h2>
+    <div class="flex-grid">
+        <div class="flex-item">
+            <img src="https://images.unsplash.com/photo-1564186763535-ebb21ef5277f?q=80&w=1170&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="Producto 1">
+            <h4>Guitarra electrica</h4>
+        </div>
+        <div class="flex-item">
+            <img src="https://plus.unsplash.com/premium_photo-1661353245572-5e41f6208de8?q=80&w=1170&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="Producto 2">
+            <h4>Consola de dj</h4>
+        </div>
+        <div class="flex-item">
+            <img src="https://images.unsplash.com/photo-1647788738100-e138bf960f30?q=80&w=1170&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="Producto 3">
+            <h4>Batería electrónica</h4>
+        </div>
+    </div>
+</section>
+
 <footer class="footer">
 
     <div class="footer-logo">
